[package]
name = "pmold"
version = "0.1.0"
edition = "2024"
description = "Project Mold 项目摸具"

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
tokio = { version = "^1.0", features = ["full"] }
git2 = "^0.20"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
toml = "^0.8"
regex = "^1.0"
thiserror = "^2.0"
anyhow = "^1.0"
dialoguer = "0.11.0"
